# MuyGPyS

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CONTRIBUTING.md  COPYRIGHT  LICENSE-MIT  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: develop-test.yml  pypi-publish.yml  test-pypi-publish.yml
MuyGPyS/: __init__.py  embed.py  neighbors.py  predict.py  uq.py  utils.py
MuyGPyS/_src/: config.py  jaxconfig.py  mpi_utils.py  util.py
MuyGPyS/_src/gp/: jax_distance.py  jax_kernels.py  jax_muygps.py  numpy_distance.py  numpy_kernels.py  numpy_muygps.py
MuyGPyS/_src/math/: __init__.py  jax.py  meta.py  mpi.py  numpy.py  torch.py
MuyGPyS/_src/optimize/: __init__.py  jax_chassis.py  jax_objective.py  numpy_chassis.py  numpy_objective.py
MuyGPyS/_test/: __init__.py  api.py  gp.py  loss.py  optimize.py  sampler.py  shear.py  torch_utils.py  utils.py
MuyGPyS/data/: load.py  utils.py
MuyGPyS/examples/: classify.py  fast_posterior_mean.py  fast_regress.py  from_indices.py  muygps_torch.py  old_classify.py  old_regress.py  regress.py  two_class_classify_uq.py
MuyGPyS/gp/: __init__.py  distance.py  distance_j.py  fast_mean.py  fast_precompute.py  kernels.py  kernels_j.py  mean.py  mean_BACKUP_5618.py  mean_BASE_5618.py  multivariate_muygps.py  muygps.py  muygps_j.py  noise.py  old_muygps.py  sigma_sq.py  tensors.py  variance.py
MuyGPyS/gp/deformation/: __init__.py  anisotropy.py  deformation_fn.py  isotropy.py  metric.py  null.py
MuyGPyS/gp/distortion/: __init__.py  anisotropic.py  distortion_fn.py  embed.py  isotropic.py  null.py
MuyGPyS/gp/hyperparameter/: __init__.py  hierarchical_nonstationary.py  scalar.py  scale.py  tensor.py  vector.py
MuyGPyS/gp/kernels/: __init__.py  (+6 more)
MuyGPyS/optimize/: __init__.py  batch.py  chassis.py  chassis_j.py  loss.py  objective.py  objective_j.py  sigma_sq.py  utils.py
MuyGPyS/pytorch/: muygps_layer.py
MuyGPyS/testing/: api_tests.py  gp.py  old_api_tests.py  oldgp.py  opt.py  test_utils.py
MuyGPyS/torch/: __init__.py  multivariate_muygps_layer.py  muygps_layer.py
data/: sub_heaton.pkl
docs/: .gitignore  conf.py  index.rst  requirements.txt
docs/MuyGPyS/: examples.rst  gp.rst  neighbors.rst  optimize.rst  predict.rst  pytorch.rst  torch.rst  uq.rst
docs/examples/: anisotropic_tutorial.ipynb  fast_regression_tutorial.ipynb  loss_tutorial.ipynb  neighborhood_illustration.ipynb  nonstationary_tutorial.ipynb  regress_api_tutorial.ipynb  torch_tutorial.ipynb  univariate_regression_tutorial.ipynb  univariate_regression_with_opt_loop.ipynb  utils.py
docs/resources/: references.rst
experimental/: GPsolvetensors.ipynb  anisotropic_2D_with_opt_loop.ipynb  anisotropic_tutorial_with_opt_loop.ipynb  anisotropic_with_opt_loop.ipynb  isotropic_1D_with_opt_loop.ipynb  nonstationary_tutorial.ipynb  shear_2x3_offset.ipynb  shear_kernel.ipynb  test_distance_functions.ipynb  univariate_regression_with_opt_loop.ipynb
muyscans/: embed.py  neighbors.py  predict.py  uq.py  utils.py
muyscans/data/: load.py  utils.py
muyscans/examples/: classify.py  mnist.py  regress.py  stargal.py
muyscans/gp/: distance.py  kernels.py  lkgp.py  muygps.py
muyscans/optimize/: batch.py  objective.py
muyscans/testing/: test_utils.py
notebooks/: univariate_regression_tutorial.ipynb
performance/: benchmark.py
scripts/flake/: fatal.sh  issues.sh
scripts/lc-setup/: README.md  pascal.sh
tests/: api.py  batch.py  data.py  gp.py  jax_correctness.py  kernels.py  mini_batch.py  mpi_correctness.py  multivariate.py  neighbors.py  nonstationary.py  old_api.py  old_gp.py  old_optimize.py  old_predict.py  optimize.py  predict.py  regress_api.py  scale_opt.py  torch_api.py  torch_correctness.py  versions.py
tests/api/: classify.py  regress.py  torch.py
tests/backend/: jax_correctness.py  mpi_correctness.py  torch_correctness.py
tests/experimental/: mini_batch.py  nonstationary.py  shear.py
tests/muygps_torch/: README.md  muygps_torch.py  torch_api.py
tests/precompute/: README.md  fast_posterior_mean.py  fast_posterior_mean_api.py  fast_regress_api.py  fast_regressor.py
tests/torch/: README.md  muygps_torch.py  torch_api.py
(+97 files in other folders)
