# Copyright 2021-2023 Lawrence Livermore National Security, LLC and other
# MuyGPyS Project Developers. See the top-level COPYRIGHT file for details.
#
# SPDX-License-Identifier: MIT

[metadata]
name = muygpys
version = attr: MuyGPyS.__version__
author = Benjamin W. Priest
author_email = priest2@llnl.gov
description = Scalable Approximate Gaussian Process using Local Kriging
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/LLNL/MuyGPyS
download_url = https://pypi.org/project/muygpys
project_urls = 
    Source Code = https://github.com/LLNL/MuyGPyS
    Documentation = https://muygpys.readthedocs.io
    Bug Tracker = https://github.com/LLNL/MuyGPyS/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.7
zip_safe = False
packages = find:
install_requires =
    numpy>=1.18.5
    scipy>=1.9.0
    scikit-learn>=0.23.2
    bayesian-optimization>=1.4.2
